PROJECT( flickrkio )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH})


FIND_PACKAGE(KDE4 REQUIRED)
INCLUDE_DIRECTORIES( ${KDE4_INCLUDES} . )
include_directories (${CMAKE_CURRENT_BINARY_DIR})


set(kio_flickr_PART_SRCS
   flickrkio.cpp)

kde4_add_plugin(kio_flickr ${kio_flickr_PART_SRCS})

target_link_libraries(kio_flickr ${KDE4_KIO_LIBS} qjson)

install(TARGETS kio_flickr  DESTINATION ${PLUGIN_INSTALL_DIR})

########### install files ###############

install(FILES flickr.protocol DESTINATION ${SERVICES_INSTALL_DIR})

SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
SET(CPACK_SET_DESTDIR TRUE)
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "David Edmundson")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "1~alpha2")
include(CPack)